# medical_agent

./: .gitignore  CLAUDE.md  README.md  checkpoints.db-shm  checkpoints.db-wal  env.sample  pyproject.toml
app/: main.py
app/agents/: dummy.py  medical_agent.py  prompts.py  tools.py
app/api/routes/: chat.py  threads.py
app/core/: config.py
app/data/: favorite_questions.json  threads.json
app/data/threads/: 2f2a143c-04f4-4f52-9ca9-6b59da81bfc5.json  2f2a143c-04f4-4f52-9ca9-6b59da81bfd6.json  3f2a143c-04f4-4f52-9ca9-6b59da81bfc5.json  3f2a143c-04f4-4f52-9ca9-6b59da81bfd6.json  4f2a143c-04f4-4f52-9ca9-6b59da81bfc5.json  5f2a143c-04f4-4f52-9ca9-6b59da81bfc5.json  6f2a143c-04f4-4f52-9ca9-6b59da81bfc5.json
app/eval/: __init__.py  create_dataset.py  run_opik_eval.py
app/models/: __init__.py  chat.py  threads.py
app/services/: agent_service.py  conversation_service.py  threads_service.py
app/utils/: logger.py  read_json.py
docs/: spec.md
tests/: conftest.py  test_main.py  test_v8_scenarios.py
